@@ -50,6 +50,8 @@ Package org.springframework.webflow.execution
 * Added FlowExecutionListener.sessionCreated(RequestContext, FlowSession) callback, useful for
   setting flow attributes before the flow starts (SWF-223).
 * ClientContinuationFlowExecutionRepository now uses 'URL-safe Base64 encoding' (SWF-270).
+* AbstractConversationFlowExecutionRepository.parseFlowExecutionKey() now throws an
+  BadlyFormattedFlowExecutionKeyException when asked to parse an empty flow execution key (SWF-277).
 
 Package org.springframework.webflow.executor
 * Added resource URL encoding to redirects in a JSF environment (SWF-256).
